--- a/bestseller.html
+++ b/bestseller.html
@@ -7,17 +7,22 @@
 
     <title>모두의 베스트셀러</title>
 
-        <!-- Bulma CSS -->
+    <!-- Bulma CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <!-- JS -->
+    <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
-        <!-- index CSS -->
+    <!-- index CSS -->
     <link rel="stylesheet" href="/static/index.css">
     <link rel="stylesheet" href="/static/bestseller.css">
 
     <script>
+
+        $(document).ready(function () {
+            let userid_receive = '{{ name.username }}'
+        });
+
         // 즐겨찾기 등록
         function get_favorite(name, title, author, publisher, image) {
             $.ajax({
@@ -64,6 +69,12 @@
             $('.yes_bestseller').hide();
             $('.aladin_bestseller').show();
         }
+
+      function logout(){
+        $.removeCookie('mytoken');
+        alert('로그아웃!')
+        window.location.href='/login'
+      }
     </script>
 </head>
 <body>
@@ -72,8 +83,8 @@
 <nav class="menu">
     <ul id="gnb">
         <!--<a href="#" class="log_in">로그인을 해주세요</a>-->
-        <!--<p>{{ user_info }}님 안녕하세요!</p>-->
-
+        <p class="greeting">{{ name.username }}님 안녕하세요!</p>
+        <button onclick="logout()" class="logout">로그아웃</button>
         <li><a href="/bestseller" class="in-white">베스트셀러</a></li>
         <li><a href="/favorite" class="in-white">즐겨찾기</a></li>
         <li><a href="/review" class="in-white">리뷰</a></li>
@@ -114,7 +125,7 @@
                 <p>{{ author }}</p>
                 <p>{{ publisher }}</p>
             </div>
-            <button onclick='get_favorite("{{ name }}", "{{ title }}", "{{ author }}", "{{ publisher }}", "{{ image }}")'>
+            <button onclick='get_favorite("{{ name.username }}", "{{ title }}", "{{ author }}", "{{ publisher }}", "{{ image }}")'>
                 즐겨찾기 등록!
             </button>
         </li>
@@ -136,7 +147,7 @@
                 <p>{{ author }}</p>
                 <p>{{ publisher }}</p>
             </div>
-            <button onclick='get_favorite("{{ name }}", "{{ title }}", "{{ author }}", "{{ publisher }}", "{{ image }}")'>
+            <button onclick='get_favorite("{{ name.username }}", "{{ title }}", "{{ author }}", "{{ publisher }}", "{{ image }}")'>
                 즐겨찾기 등록!
             </button>
         </li>
@@ -158,7 +169,7 @@
                 <p>{{ author }}</p>
                 <p>{{ publisher }}</p>
             </div>
-            <button onclick='get_favorite("{{ name }}", "{{ title }}", "{{ author }}", "{{ publisher }}", "{{ image }}")'>
+            <button onclick='get_favorite("{{ name.username }}", "{{ title }}", "{{ author }}", "{{ publisher }}", "{{ image }}")'>
                 즐겨찾기 등록!
             </button>
         </li>
@@ -180,7 +191,7 @@
                 <p>{{ author }}</p>
                 <p>{{ publisher }}</p>
             </div>
-            <button onclick='get_favorite("{{ name }}", "{{ title }}", "{{ author }}", "{{ publisher }}", "{{ image }}")'>
+            <button onclick='get_favorite("{{ name.username }}", "{{ title }}", "{{ author }}", "{{ publisher }}", "{{ image }}")'>
                 즐겨찾기 등록!
             </button>
         </li>
