--- a/login.html
+++ b/login.html
@@ -168,7 +168,7 @@
 {# 메뉴바 #}
 <nav class="menu">
     <ul id="gnb">
-        <a href="#" class="log_in greeting">로그인을 해주세요</a>
+        <a href="/login" class="log_in greeting">로그인을 해주세요</a>
         <!--<p>{{ user_info }}님 안녕하세요!</p>-->
 
         <li><a href="/bestseller" class="in-white">베스트셀러</a></li>
