--- a/bestseller.html
+++ b/bestseller.html
@@ -84,7 +84,7 @@
     <ul id="gnb">
         <!--<a href="#" class="log_in">로그인을 해주세요</a>-->
         <p class="greeting">{{ name.username }}님 안녕하세요!</p>
-        <button onclick="logout()" class="logout">로그아웃</button>
+        <button onclick="logout()" class="button is-white logout is-small">로그아웃</button>
         <li><a href="/bestseller" class="in-white">베스트셀러</a></li>
         <li><a href="/favorite" class="in-white">즐겨찾기</a></li>
         <li><a href="/review" class="in-white">리뷰</a></li>
