--- a/favorite.html
+++ b/favorite.html
@@ -14,8 +14,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <!-- index CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/index.css">
     <link rel="stylesheet" href="/static/favorite.css">
+
 
     <script>
         $(document).ready(function () {
@@ -63,22 +66,24 @@
                             let username = rows[i]['username']
                             let done = rows[i]['done']
                             let saved = rows[i]['saved']
+                            let publisher = rows[i]['publisher']
 
                             let temp_html = ``
                             if (done == 0 && saved == 0) {
                                 temp_html = `<article class="media">
                                             <figure class="media-left">
-                                                <p class="image is-64x64">
+                                                <p class="image is-96x96">
                                                     <img src="${image}">
                                                 </p>
                                             </figure>
                                             <div class="media-content">
                                                 <div class="content">
                                                     <p>
-                                                        <strong class="book-title">${title}</strong> <medium class="author">${author}</medium>
-                                                        <br>
-                                                        <button value = "${title}" onclick="open_modal(this.value)">리뷰작성!</button> <button value = "${title}" onclick="unlike(this.value)">즐겨찾기 취소!</button>
-
+                                                        <strong class="book-title">${title}</strong> <br> <medium class="author">${author}</medium> <br> <small class="publisher">${publisher}</small>
+                                                        <div class="buttons are-small">
+                                                            <button value = "${title}" onclick="open_modal(this.value)" class="button">리뷰작성</button>
+                                                            <button value = "${title}" onclick="unlike(this.value)" class="button">즐겨찾기 취소</button>
+                                                        </div>
                                                     </p>
                                                 </div>
                                                 <nav class="level is-mobile">
@@ -140,7 +145,7 @@
     <ul id="gnb">
         <!--<a href="#" class="log_in">로그인을 해주세요</a>-->
         <p class="greeting">{{ name.username }}님 안녕하세요!</p>
-        <button onclick="logout()" class="logout">로그아웃</button>
+        <button onclick="logout()" class="button is-white logout is-small">로그아웃</button>
         <li><a href="/bestseller" class="in-white">베스트셀러</a></li>
         <li><a href="/favorite" class="in-white">즐겨찾기</a></li>
         <li><a href="/review" class="in-white">리뷰</a></li>
@@ -167,7 +172,7 @@
     <div class="modal_overlay"></div>
     <div class="modal_content">
         <button onclick="close_modal()" type="button" class="btn-close" aria-label="Close"></button>
-        <h1>REVIEW</h1>
+        <h5 class="review_title">REVIEW</h5>
         <div class="input-group mb-3">
             <label class="input-group-text" for="star">별점</label>
             <select class="form-select" id="star">
@@ -184,7 +189,7 @@
                           style="height: 100px"></textarea>
             <label for="review">Comments</label>
         </div>
-        <button onclick="done_book(bookTitle)" type="button" class="btn btn-dark">등록하기</button>
+        <button onclick="done_book(bookTitle)" type="button" class="btn btn-dark btn-sm">등록하기</button>
     </div>
 </div>
 </body>
