--- a/review.html
+++ b/review.html
@@ -14,6 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <!-- index CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/index.css">
     <link rel="stylesheet" href="/static/review.css">
 
@@ -40,35 +42,50 @@
                             let date = rows[i]['date']
                             let read = rows[i]['read']
                             let image = rows[i]['image']
+                            let publisher = rows[i]['publisher']
 
                             let temp_html = ``
                             if (done == 1 && read == 0) {
-                                temp_html = `
-                 <h5>${date}</h5>
-                 <button value = "${title}" onclick="open_modals(this.value)" type="button" class="btn btn-dark">삭제</button>
-                <div class="card mb-1" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="${image}"
-                             class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">${title}</h5>
-                            <p class="card-text">${author}</p>
-    <!--                        <p class="card-text"><small class="text-muted">을유문화사</small></p>-->
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <p>${star}</p>
-            <p>${review}</p>`
+                                temp_html = `<article class="media">
+                                            <figure class="media-left">
+                                                <p class="image is-96x96">
+                                                    <img src="${image}">
+                                                </p>
+                                            </figure>
+                                            <div class="media-content">
+                                                <div class="content">
+                                                    <p>
+                                                        <strong class="book-title">${title}</strong> <br> <medium class="author">${author}</medium> <br> <small class="publisher">${publisher}</small>
+                                                        <p class="starAndReview">${star}</p>
+                                                        <p class="starAndReview">${review}</p>
+                                                    </p>
+                                                </div>
+                                                <nav class="level is-mobile">
+                                                    <div class="level-left">
+                                                        <a class="level-item">
+                                                            <span class="icon is-small"><i class="fas fa-reply"></i></span>
+                                                        </a>
+                                                        <a class="level-item">
+                                                            <span class="icon is-small"><i class="fas fa-retweet"></i></span>
+                                                        </a>
+                                                        <a class="level-item">
+                                                            <span class="icon is-small"><i class="fas fa-heart"></i></span>
+                                                        </a>
+                                                    </div>
+                                                </nav>
+                                            </div>
+                                            <div class="media-right">
+                                                <small>${date}</small>
+                                                <div class="buttons are-small is-right">
+                                                    <button value = "${title}" onclick="open_modals(this.value)" class="button">삭제</button>
+                                                </div>
+                                            </div>
+                                        </article>`
                             }
                             $('#read-list').append(temp_html)
                         }
 
                     }
-                    alert(response["불러오기 완료"])
                 }
             });
         }
@@ -97,11 +114,11 @@
             });
         }
 
-      function logout(){
-        $.removeCookie('mytoken');
-        alert('로그아웃!')
-        window.location.href='/login'
-      }
+        function logout() {
+            $.removeCookie('mytoken');
+            alert('로그아웃!')
+            window.location.href = '/login'
+        }
 
     </script>
 </head>
@@ -112,7 +129,7 @@
     <ul id="gnb">
         <!--<a href="#" class="log_in">로그인을 해주세요</a>-->
         <p class="greeting">{{ name.username }}님 안녕하세요!</p>
-        <button onclick="logout()" class="logout">로그아웃</button>
+        <button onclick="logout()" class="button is-white logout is-small">로그아웃</button>
         <li><a href="/bestseller" class="in-white">베스트셀러</a></li>
         <li><a href="/favorite" class="in-white">즐겨찾기</a></li>
         <li><a href="/review" class="in-white">리뷰</a></li>
@@ -130,19 +147,17 @@
 </section>
 
 {# 리뷰 #}
-<section id="read">
-    <section id="read-list">
-    </section>
-</section>
+<article class="media" id="read-list">
 
+</article>
 {# 리뷰 삭제 모달 #}
 <div class="modals hidden">
     <div class="modals_overlay"></div>
     <div class="modals_content">
-        <h4>정말 삭제하시겠습니까?</h4>
+        <h4 class="delete_message">정말 삭제하시겠습니까?</h4>
         <div class="btn_group">
-            <button onclick="cancel_read(bookTitle)" type="button" class="btn btn-dark">삭제하기</button>
-            <button onclick="close_modals()" type="button" class="btn btn-dark">취소하기</button>
+            <button onclick="cancel_read(bookTitle)" type="button" class="btn btn-dark btn-sm">삭제하기</button>
+            <button onclick="close_modals()" type="button" class="btn btn-dark btn-sm">취소하기</button>
         </div>
     </div>
 </div>
